[package]
name = "checker"
version = "0.3.2"
authors = ["Yuhui Huang", "Yuze Fu <i@xfox.me>"]
edition = "2018"
publish = false

[dependencies]
csv = "1.1.6"
md5 = "0.7.0"
regex = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.56"
thiserror = "1.0.30"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
