[package]
name = "checker"
version = "0.3.2"
authors = ["Yuhui Huang", "Yuze Fu <i@xfox.me>"]
edition = "2018"
publish = false

[dependencies]
csv = "1.1.6"
md5 = "0.7.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
anyhow = "1.0.65"
thiserror = "1.0.37"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "6ca56aeb457f033d344a7106cb3f9f1abf8f4e98"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
